add check-function